--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       class="cld-responsive" />
   </div>
 
+  <p><a href="http://cloudinary.com/documentation/responsive_images#automating_responsive_images_with_javascript">Docs</a></p>
 
   <p>These are just some examples.  (Very little effort went into styles.) Try opening this in responsive design mode in your browser.</p>
 
